# romanchatbot

./: .gitignore  .replit  =3.22.0  README.md  chat.py  main.py  phoenix_combined.py  phoenix_server.py  phoenix_ui.py  pyproject.toml  rag.py  replit.nix  styles.py
.streamlit/: config.toml
attached_assets/: Pasted--To-view-the-Phoenix-app-in-your-browser-visit-http-localhost-6006-For-more-information-on--1737936703463.txt  Pasted--venv-base-Jays-Mac-roman-chatbot-jaychung-python-phoenix-ui-py-2025-01-26-15-47-54-235-main-1737935319149.txt  arize_takehome.ipynb  docs_arize_com_phoenix.md  docs_arize_com_phoenix_quickstart.md  docs_arize_com_phoenix_tracing_how-to-tracing_capture-feedback.md
chroma_db/: chroma.sqlite3
templates/: dashboard.html
