[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.23",
    "httpx>=0.28.1",
    "langchain>=0.3.15",
    "langchain-chroma>=0.2.0",
    "langchain-community>=0.3.15",
    "langchain-core>=0.3.31",
    "langchain-openai>=0.3.2",
    "langchain-text-splitters>=0.3.5",
    "openai>=1.60.1",
    "streamlit>=1.41.1",
    "wikipedia>=1.4.0",
    "xds-protos>=1.62.3",
]
