[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "arize-phoenix-otel>=0.7.1",
    "arize>=7.32.0",
    "chromadb>=0.5.23",
    "fastapi>=0.115.7",
    "httpx>=0.28.1",
    "langchain>=0.3.15",
    "langchain-chroma>=0.2.0",
    "langchain-community>=0.3.15",
    "langchain-core>=0.3.31",
    "langchain-openai>=0.3.2",
    "langchain-text-splitters>=0.3.5",
    "openai>=1.60.1",
    "openinference-instrumentation-langchain>=0.1.29",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-instrumentation>=0.41b0",
    "opentelemetry-sdk>=1.20.0",
    "phoenix>=0.9.0",
    "python-jose[cryptography]>=3.3.0",
    "streamlit>=1.41.1",
    "uvicorn[standard]>=0.34.0",
    "wikipedia>=1.4.0",
    "xds-protos>=1.62.3",
    "opentelemetry-exporter-otlp>=1.20.0",
    "jinja2>=3.1.5",
    "python-multipart>=0.0.20",
    "arize-phoenix>=3.22.0",
    "openinference-instrumentation-openai>=0.1.18",
]
